--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -3,21 +3,27 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint .",
-    "test": "jest"
+    "lint": "next lint"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "axios": "^0.21.1"
+    "next": "^14.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "axios": "^1.6.0",
+    "date-fns": "^3.0.0"
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
-    "jest": "^27.0.6",
-    "typescript": "^4.4.4"
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "typescript": "^5.3.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
+    "eslint": "^8.55.0",
+    "eslint-config-next": "^14.0.0"
   }
 }
